--- a/project/Eg_of_access_to_data_in_the_cloud.ipynb
+++ b/project/Eg_of_access_to_data_in_the_cloud.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "catalog_url = 'https://raw.githubusercontent.com/obidam/ds2-2021/main/ds2_data_catalog.yml'\n",
     "cat = open_catalog(catalog_url)\n",
-    "ds = cat.en4.read_chunked()"
+    "list()"
    ]
   },
   {
@@ -92,9 +92,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bluecloud",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "bluecloud"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -106,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.6.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
