--- a/project/Eg_of_access_to_data_in_the_cloud.ipynb
+++ b/project/Eg_of_access_to_data_in_the_cloud.ipynb
@@ -57,14 +57,14 @@
    "source": [
     "catalog_url = 'https://raw.githubusercontent.com/obidam/ds2-2021/main/ds2_data_catalog.yml'\n",
     "cat = open_catalog(catalog_url)\n",
-    "list()"
+    "list(cat)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load data"
+    "### Connect to data"
    ]
   },
   {
