--- a/project/Eg_of_access_to_data_in_the_cloud.ipynb
+++ b/project/Eg_of_access_to_data_in_the_cloud.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = cat.en4.read_chunked()\n",
+    "ds = cat[\"en4\"].to_dask()\n",
     "print(\"Size of the dataset:\", ds.nbytes/1e9,\"Gb\")\n",
     "ds"
    ]
