--- a/project/Eg_of_access_to_data_in_the_cloud.ipynb
+++ b/project/Eg_of_access_to_data_in_the_cloud.ipynb
@@ -88,6 +88,15 @@
     "print(\"Size of the dataset:\", ds.nbytes/1e9,\"Gb\")\n",
     "ds"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds['adt'].isel(time=0).plot()"
+   ]
   }
  ],
  "metadata": {
